@@ -585,11 +585,11 @@ int xml_create_settings_file(char *path)
 
 
 	section_node = xmlNewChild(root_node, NULL, "tabs", NULL);
-	xmlNewTextChild(section_node, NULL, "bible", "1");
-	xmlNewTextChild(section_node, NULL, "comm", "1");
-	xmlNewTextChild(section_node, NULL, "dict", "1");
-	xmlNewTextChild(section_node, NULL, "book", "1");
-	xmlNewTextChild(section_node, NULL, "percomm", "1");
+	xmlNewTextChild(section_node, NULL, "bible", "0");
+	xmlNewTextChild(section_node, NULL, "comm", "0");
+	xmlNewTextChild(section_node, NULL, "dict", "0");
+	xmlNewTextChild(section_node, NULL, "book", "0");
+	xmlNewTextChild(section_node, NULL, "percomm", "0");
 	return 1;
 }
 
